syntax = "proto3";

package driversstate.v1;

import "common/geo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Binit-Dhakal/Saarathi/pkg/contracts/dto/driverspb";

message TripOffer {
  string offer_id = 1;
  string trip_id = 2;
  common.geo.v1.Coordinates pick_up = 3;
  common.geo.v1.Coordinates drop_off = 4;
  int32 price = 5;
  double distance = 6;
  google.protobuf.Timestamp expires_at = 7;
}

message DriverUpdatePayload {
  string trip_id = 1;
  string rider_name = 2;
  string rider_number = 3;
  common.geo.v1.Coordinates pick_up = 4;
  common.geo.v1.Coordinates drop_off = 5;
  int32 price = 6;
  double distance = 7;
}
